# gifski-wasm

./: .git-blame-ignore-revs  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-parallel.sh  build.sh  encode.ts  package.json  rust-toolchain  tsconfig.json
.github/workflows/: main.yml
examples/cloudflare-worker/: .gitignore  README.md  package.json
examples/cloudflare-worker-esm-format/: README.md  package.json  wrangler.toml
examples/cloudflare-worker-esm-format/src/: index.js
examples/cloudflare-worker-legacy/: README.md  package.json  wrangler.toml
examples/cloudflare-worker-legacy/src/: index.js
examples/cloudflare-worker/src/: index.js
examples/simple-gif-creator/: gif.worker.js  index.html  main.js  package.json  vite.config.js
pkg/: gifski_wasm.d.ts  gifski_wasm.js  gifski_wasm_bg.wasm  gifski_wasm_bg.wasm.d.ts
pkg-parallel/: gifski_wasm.d.ts  gifski_wasm.js  gifski_wasm_bg.wasm  gifski_wasm_bg.wasm.d.ts  package.json
src/: cloudflare.ts  encode-mt.ts  encode-multi-thread.ts  encode.ts  lib.rs  node.ts  tests.rs
test/: node.test.js  package.json
